Revision history for Dist-Zilla-Plugin-CheckExtraTests

{{$NEXT}}

0.002     2010-03-23 19:28:48 EST5EDT

    - fixed problem in release check

0.001     2010-03-22 01:10:12 EST5EDT


    - first draft