@@ -41,6 +41,8 @@ git_remote = github
 directory = t
 directory = xt
 directory = examples
+directory = corpus
+
 [License]
 [MakeMaker]
 [MetaYAML]
